@@ -7,15 +7,15 @@ AUX postinstall-nodb-en.txt 171 RMD160 88ff71d95c63f1b5d76e398c3566ada75954cdf4 
 DIST moodle-1.9.12.tgz 14044589 RMD160 32054256881037026454c41e7dd4c3683cc361b2 SHA1 838d2fb9c17903c1835aee2154527158e5c7a83d SHA256 fc4fbe600102fc0fc878f6db423d5bac5ef9362aba8d97720939f1078f905f80
 DIST moodle-2.0.3.tgz 22438221 RMD160 e204249cb439754ed7c484815b763a4515c14ff0 SHA1 3dc8b1a46f94b54442b907461daaf453b955d1e6 SHA256 91ffa120a2674d835a0f087d472c789ddeaac305181c80c8a0af33351d065945
 DIST moodle-2.1.tgz 23128617 RMD160 ed0758ffd1534c907ff27f5b9c5d1b285e499239 SHA1 9d7830f7b16621c22813634f19baae56cd565315 SHA256 8739ab133be99736ae7d9f004b4163b332dfd135c064899f84b24b8867ea2810
-EBUILD moodle-1.9.12.ebuild 3019 RMD160 419bb9132bccb0438ca2ae679ff31e682df25128 SHA1 90dfedc8d380b128c65dfb9a8e36fc76c92e605f SHA256 ab1853e987b354ec598cfffde249cf62bdfcca0228e76abac18e82c915fb7728
-EBUILD moodle-2.0.3.ebuild 3582 RMD160 1a8cf4d09c3ea6c68f1644e02be8d9d5d68a4690 SHA1 e61e0972e3d87fa74ebbb1632e5aa6be8dc36a54 SHA256 c5b2ec282ecb89b101d9a6c75839f95567736d6b3da66d48ff2e11a9ffe31947
-EBUILD moodle-2.1.ebuild 3580 RMD160 f1637fb26e29c8ce13ab42bb51c905ac5772b58a SHA1 25d1c4b3eb5ecd414cf227685819f16569562d2c SHA256 7b772962dab5ec2eb92b9148299290c52cbb2048d094fc4dc2053e043e46f09e
-MISC ChangeLog 1798 RMD160 77b471a3cd73d422264c4c2550fa04072bc91773 SHA1 1da01141d75dfdf5ef00ada252b0ae65031af46c SHA256 aead15ac1fd81e7e177fc0d55c1c1c2b590d447e530345fb862beeeefba927e4
+EBUILD moodle-1.9.12.ebuild 3169 RMD160 674882ad09b4f4b3bfe783c9be00e388ebca44d2 SHA1 bdc89ccccee6cbcc2b9d7186564f842668815195 SHA256 153b9ed55861a4a40cc74895e00339da0d12c981ddad094d04ad15f02a322ed8
+EBUILD moodle-2.0.3.ebuild 4021 RMD160 ee8084b7c255684df396446a108323dc0d736a4c SHA1 c5c89d477ec3d50734239f5100dc82bce73a39c1 SHA256 c292ec7cb897669c2640f92a6a3946856c5f8ff4c2b246fc5a7016f350b72df7
+EBUILD moodle-2.1.ebuild 4019 RMD160 34cc310c46499a536cc2133990813cc0f3f298ed SHA1 c8fd8fbcd4cd4f00cee40a31a4c9a191219843a5 SHA256 23e250c693bd2e1b5e4cb8b88eb6da042d14bc4b7a47ace842e2255a690d951b
+MISC ChangeLog 1990 RMD160 16a8cb2a0f1e0edd3787c8270d27524be52876c0 SHA1 1cacebe9c69529345272463ea24c1d2301fb085f SHA256 6d5b6d9ba50b771d526175fbacaf105b77d213c2bcf30bd261dad1b440cc14c6
 MISC metadata.xml 256 RMD160 7cd5a16a6eade95f71d40edbb4729baadfbc7649 SHA1 809eeef12d97ae39db024aea151a70c7363475b7 SHA256 8230894d717ea9f2e42f9c7de54671126820f89bf05ca96ec5f03842b12378e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk4YuUMACgkQl5yvQNBFVTWogwCfeGoWiTYh+oGcOsyF5OQiutw2
-nrsAnjTITi939/hSq9J4GFD/ioTaHcYS
-=ypKA
+iEYEAREIAAYFAk4cuJwACgkQl5yvQNBFVTUOMACcDV8dcfwbFeDkrRCx9ACEGlbm
+rm0AoKOoucZP30KL1703ZJaLerQNIa8R
+=evbm
 -----END PGP SIGNATURE-----
